<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateInfoActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:id="@+id/edit_text_layout">

            <TextView
                android:id="@+id/info_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_margin="10dp"
                android:text="@string/view_patient_information"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textSize="18sp"></TextView>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_first_name"
                    android:inputType="textPersonName"
                    android:textColor="@drawable/edit_text_selector"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/last_name">
                </TextView>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="18sp"
                    android:inputType="textPersonName"
                    android:textColor="@drawable/edit_text_selector"
                    android:hint="@string/enter_last_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/department">
                </TextView>
                <Spinner
                    android:id="@+id/patient_department_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/nurse_id"
                    android:layout_marginBottom="10dp">
                </TextView>

                <Spinner
                    android:id="@+id/nurse_id_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp">
                </TextView>
                <Spinner
                    android:id="@+id/patient_room_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center">
                </Spinner>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/edit_patient_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/edit_text_layout"
            android:onClick="createPatientButton"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/btn_edit_patient" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/edit_patient_btn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:text="@string/view_patient_test"
                    android:textStyle="bold"

                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_test"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:drawableLeft="@drawable/ic_action_add"
                    android:drawablePadding="15dp"
                    android:layout_marginEnd="15dp"
                    android:id="@+id/add_test_btn">
                </Button>
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/test_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="500dp">
            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>
    </RelativeLayout>
</ScrollView>