<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PatientActivity"
    android:background="@drawable/background_gradient"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:id="@+id/edit_text_layout">

        <TextView
            android:id="@+id/info_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_margin="10dp"
            android:text="@string/add_patient"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/white"
                android:textSize="18sp"></TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_first_name"
                android:inputType="textPersonName"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:textColor="@drawable/edit_text_selector"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/last_name">
            </TextView>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:textColor="@drawable/edit_text_selector"
                android:hint="@string/enter_last_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:text="@string/department">
            </TextView>
            <Spinner
                android:id="@+id/add_patient_department_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:popupBackground="@drawable/rounded_spinner"
                android:textAlignment="center">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/nurse_id"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white">
            </TextView>

            <Spinner
                android:id="@+id/add_patientNurse_id_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:popupBackground="@drawable/rounded_spinner"
                android:textAlignment="center">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:textSize="18sp">
            </TextView>
            <Spinner
                android:id="@+id/add_patient_room_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:popupBackground="@drawable/rounded_spinner"
                android:textAlignment="center">
            </Spinner>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/enter_patient_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="120dp"
        android:onClick="createPatientButton"
        android:textAllCaps="false"
        android:background="@drawable/button_round_corner_shape"
        android:text="@string/btn_enter_patient" />
</LinearLayout>
<!--patient information-->
<!--firstname-->
<!--lastname-->
<!--
department
nurse ID
room-->
<!--button enter payment-->
